--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -234,10 +234,10 @@
             left: 1030px;
         }
         .floor4 .close_btn{
-            left: 220px;
+            left: 470px;
         }
         .floor4 .read_btn{
-            left: 215px;
+            left: 470px;
         }
 
         .floor4 .popup div{
@@ -263,6 +263,50 @@
 
         .floor3 .popup div{
             background-color: #FFE624;
+            -webkit-border-radius: 15px;
+            -moz-border-radius: 15px;
+            border-radius: 15px;
+        }
+
+        .floor2 .popup{
+            background-color: #7E40CC;
+            color: #ffffff;
+            bottom: 350px;
+            width: 590px;
+            left: 1205px;
+        }
+        .floor2 .close_btn{
+            left: 270px;
+        }
+        .floor2 .read_btn{
+            left: 265px;
+        }
+
+        .floor2 .popup div{
+            background-color: #7E40CC;
+            -webkit-border-radius: 15px;
+            -moz-border-radius: 15px;
+            border-radius: 15px;
+        }
+
+
+
+        .floor1 .popup{
+            background-color: #CD3866;
+            color: #ffffff;
+            bottom: 620px;
+            width: 590px;
+            left: 1205px;
+        }
+        .floor1 .close_btn{
+            left: 270px;
+        }
+        .floor1 .read_btn{
+            left: 265px;
+        }
+
+        .floor1 .popup div{
+            background-color: #CD3866;
             -webkit-border-radius: 15px;
             -moz-border-radius: 15px;
             border-radius: 15px;
@@ -385,6 +429,40 @@
             </h1></div>
             <div class="popup_content">
                 Вы, конечно, можете начать свой бизнес и действовать дальше по ситуации, но без четкого плана и цели ваши действия будут похожи на хождение по кругу.
+            </div>
+
+            <div class="read_btn">читать</div>
+            <div class="close_btn">×</div>
+        </div>
+        <!--POPUP ENД-->
+    </div>
+
+    <div class="floor floor2" style="background-color: #7E40CC">
+        <iframe src="floor2.html" frameBorder="0" scrolling="no"></iframe>
+        <!--POPUP-->
+        <div class="popup">
+            <div class="popup_header"><h1>
+                Разногласия с партнерами по бизнесу
+            </h1></div>
+            <div class="popup_content">
+                Если у вас есть партнер по бизнесу, то вам нужно с самого начала вместе определить стратегию ведения бизнеса и обговорить ключевые моменты. Иначе в любой момент у вас могут возникнуть разногласия, которые приведут к расставанию.
+            </div>
+
+            <div class="read_btn">читать</div>
+            <div class="close_btn">×</div>
+        </div>
+        <!--POPUP ENД-->
+    </div>
+
+    <div class="floor floor1" style="background-color: #CD3866">
+        <iframe src="floor0.html" frameBorder="0" scrolling="no"></iframe>
+        <!--POPUP-->
+        <div class="popup">
+            <div class="popup_header"><h1>
+                Избыточное кредитование
+            </h1></div>
+            <div class="popup_content">
+                Большое количество кредитов, которые вы не сможете обслуживать, в конечном итоге приведет к банкротству компании.
             </div>
 
             <div class="read_btn">читать</div>
