--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -56,7 +56,7 @@
 
     </div>
     <div class="web">
-        <iframe src="https://en.wikipedia.org/wiki/Nature_reserve" sandbox="deny-top-navigation" frameborder="0"></iframe>
+        <iframe sandbox="deny-top-navigation" frameborder="0"></iframe>
     </div>
 
     <img src="images/close.png" class="close_popup">
