--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -470,6 +470,18 @@
         </div>
         <!--POPUP ENД-->
     </div>
+
+    <div class="floor floor0">
+        <iframe src="footer.html" style="background-color: #000000" frameBorder="0" scrolling="no"></iframe>
+
+
+        <div class="header_header"><h1>"Промсвязьбанк. С вниманием <br> к каждому предпринимателю".</h1></div>
+        <div class="sub_header_header">Количество "кругов ада", которое вам предстоит пройти зависит<br>
+            только от вас. Но в любом случае, надежный финансовый партнер<br>
+            поможет вашему бизнесу пережить каждый этап. .</div>
+
+
+    </div>
 </div>
 
 <script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
