--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-    <title>Untitled</title>
+    <title>Промсвязьбанк</title>
+
+    <meta property="og:title" content="Промсвязьбанк"/>
+    <meta property="og:description" content="Начинающие бизнесмены часто совершают одни и те же ошибки, которые в итоге могут обанкротить компанию. Наш герой прошел все «круги ада» начинающего предпринимателя. "/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://hellobusiness.ru/"/>
+    <meta property="og:image" content="http://mdunaev.github.io/outside/floors/fb-img.jpg"/>
+
 
     <style>
         body, html {
