--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -74,7 +74,7 @@
         .header_header{
             color: white;
             position: absolute;
-            bottom: 300px;
+            bottom: 400px;
             left: 1150px;
             width: 700px;
             height: 200px;
@@ -85,7 +85,7 @@
         .sub_header_header{
             color: white;
             position: absolute;
-            bottom: 120px;
+            bottom: 225px;
             left: 1150px;
             width: 700px;
             height: 200px;
@@ -95,7 +95,7 @@
         .popup{
             position: absolute;
             left: 1235px;
-            bottom: 500px;
+            top: 100px;
             background-color: #000000;
             color: white;
             width: 530px;
@@ -171,7 +171,6 @@
         .floor8 .popup{
             background-color: #FFF022;
             color: #6666CC;
-            bottom: 900px;
         }
         .floor8 .popup div {
             background-color: #FFF022;
@@ -183,7 +182,6 @@
         .floor7 .popup{
             background-color: #814B39;
             color: #FFFFFF;
-            bottom: 380px;
             width: 530px;
         }
         .floor7 .close_btn{
@@ -203,7 +201,8 @@
         .floor6 .popup{
             background-color: #663399;
             color: #FFFFFF;
-            bottom: 410px;
+            width: 600px;
+            left: 1200px;
         }
         .floor6 .popup div{
             background-color: #663399;
@@ -211,11 +210,17 @@
             -moz-border-radius: 15px;
             border-radius: 15px;
         }
+        .floor6 .close_btn{
+            left: 290px;
+        }
+        .floor6 .read_btn{
+            left: 270px;
+        }
+
 
         .floor5 .popup{
             background-color: #2F6F75;
             color: #FFFFFF;
-            bottom: 320px;
             width: 1100px;
             left: 950px;
         }
@@ -236,15 +241,14 @@
         .floor4 .popup{
             background-color: #7E40CC;
             color: #FFFFFF;
-            bottom: 300px;
-            width: 940px;
-            left: 1030px;
+            width: 960px;
+            left: 1040px;
         }
         .floor4 .close_btn{
-            left: 470px;
+            left: 480px;
         }
         .floor4 .read_btn{
-            left: 470px;
+            left: 480px;
         }
 
         .floor4 .popup div{
@@ -257,7 +261,6 @@
         .floor3 .popup{
             background-color: #FFE624;
             color: #7E40CC;
-            bottom: 1070px;
             width: 590px;
             left: 1205px;
         }
@@ -278,15 +281,14 @@
         .floor2 .popup{
             background-color: #7E40CC;
             color: #ffffff;
-            bottom: 350px;
-            width: 590px;
-            left: 1205px;
+            width: 670px;
+            left: 1165px;
         }
         .floor2 .close_btn{
-            left: 270px;
+            left: 310px;
         }
         .floor2 .read_btn{
-            left: 265px;
+            left: 305px;
         }
 
         .floor2 .popup div{
@@ -301,7 +303,6 @@
         .floor1 .popup{
             background-color: #CD3866;
             color: #ffffff;
-            bottom: 620px;
             width: 590px;
             left: 1205px;
         }
@@ -317,6 +318,19 @@
             -webkit-border-radius: 15px;
             -moz-border-radius: 15px;
             border-radius: 15px;
+        }
+
+        .floor0 h1{
+            font-size: 24px;
+            text-transform: uppercase;
+        }
+
+        .floor0 .header_header{
+            bottom: 150px;
+        }
+        .floor0 .sub_header_header{
+            bottom: 155px;
+            height: 100px;
         }
 
     </style>
@@ -398,7 +412,7 @@
         <!--POPUP-->
         <div class="popup">
             <div class="popup_header"><h1>
-                Погружение в операционное управление в ущерб стратегическому
+                Погружение в операционное <br> управление в ущерб стратегическому
             </h1></div>
             <div class="popup_content">
                 «Хочешь сделать хорошо - сделай сам» - это правило не всегда работает, особенно если руководитель постоянно отвлекается на выполнение мелких задач вместо того, чтобы управлять бизнесом.
@@ -449,7 +463,7 @@
         <!--POPUP-->
         <div class="popup">
             <div class="popup_header"><h1>
-                Разногласия с партнерами по бизнесу
+                Разногласия <br> с партнерами по бизнесу
             </h1></div>
             <div class="popup_content">
                 Если у вас есть партнер по бизнесу, то вам нужно с самого начала вместе определить стратегию ведения бизнеса и обговорить ключевые моменты. Иначе в любой момент у вас могут возникнуть разногласия, которые приведут к расставанию.
@@ -482,7 +496,7 @@
         <iframe src="footer.html" style="background-color: #000000" frameBorder="0" scrolling="no"></iframe>
 
 
-        <div class="header_header"><h1>"Промсвязьбанк. С вниманием <br> к каждому предпринимателю".</h1></div>
+        <div class="header_header"><h1>С вниманием к каждому предпринимателю</h1></div>
         <div class="sub_header_header">Количество "кругов ада", которое вам предстоит пройти зависит<br>
             только от вас. Но в любом случае, надежный финансовый партнер<br>
             поможет вашему бизнесу пережить каждый этап. .</div>
