--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -327,10 +327,12 @@
 
         .floor0 .header_header{
             bottom: 150px;
+            color: #f16522;
         }
         .floor0 .sub_header_header{
             bottom: 155px;
             height: 100px;
+            color: #0d4b9f;
         }
 
     </style>
@@ -497,9 +499,9 @@
 
 
         <div class="header_header"><h1>С вниманием к каждому предпринимателю</h1></div>
-        <div class="sub_header_header">Количество "кругов ада", которое вам предстоит пройти зависит<br>
-            только от вас. Но в любом случае, надежный финансовый партнер<br>
-            поможет вашему бизнесу пережить каждый этап. .</div>
+        <div class="sub_header_header">Количество «кругов ада», которое вам предстоит пройти, зависит<br>
+            только от вас. Но в любом случае надежный финансовый партнер<br>
+            поможет вашему бизнесу пережить каждый этап.</div>
 
 
     </div>
