--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -100,7 +100,7 @@
         <div class="whiteBg"></div>
 
         <div class="search_form">
-        <input type="text" class="form-control" id="destination" placeholder="Мне сюда"
+        <input type="text" class="form-control" id="destination" placeholder="Введите адрес"
                typeahead="address for address in getLocation($viewValue) | filter:$viewValue"
                ng-model="destination" autofocus/>
             <a ng-href="#/{{destination}}"> <img src="images/search.png"></a>
