--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="libs/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="libs/underscore.string/dist/underscore.string.min.js"></script>
     <script type="text/javascript" src="libs/leaflet/leaflet.js"></script>
-    <script type="text/javascript" src="libs/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
+    <script type="text/javascript" src="libs/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
     <script type="text/javascript" src="app/app.js"></script>
     <script type="text/javascript" src="app/controllers.js"></script>
     <script type="text/javascript" src="app/services.js"></script>
@@ -57,7 +57,7 @@
                                      is-open="isOpen" ng-click="notify(station.exit.id)">
                     <!--<accordion-group ng-class="getLineClass(station.exit.station.line.name);" ng-repeat="(i, station) in stations" ng-init="isOpen = (i==0)" is-open="isOpen" ng-click="notify(station.exit.id)" heading='{{station.exit.station.name}}'>-->
                         <accordion-heading>
-                            {{station.exit.station.name}} <div class="distance"> {{station.distance.toFixed()}}м. </div>
+                            {{station.exit.station.name}} <small>{{station.exit.station.line.name}} линия</small> <div class="distance"> {{station.distance.toFixed()}}м. </div>
                         </accordion-heading>
 
                         <div ng-if="indoorSides.length">{{indoorSides[0]}}<br \>{{indoorSides[1]}}<br \>{{indoorSides[2]}}</div>
@@ -68,13 +68,16 @@
                                    <li class="li-path" ng-class="{
                                    straight:instruction.toLowerCase().search('прямо')!=-1 || instruction.toLowerCase().search('вверх')!=-1,
                                    left:instruction.toLowerCase().search('лево')!=-1,
-                                   right:instruction.toLowerCase().search('право')!=-1,
-                                   turnik:instruction.toLowerCase().search('турнике')!=-1,
-                                   escalat:instruction.toLowerCase().search('эскалат')!=-1,
-                                   lest:instruction.toLowerCase().search('лест')!=-1
+                                   right:instruction.toLowerCase().search('право')!=-1
                                    }" ng-repeat="instruction in station.indoor.instructions track by $index">{{instruction}}</li>
                                </ul>
                         </div>
+
+                        <!--,-->
+                        <!--turnik:instruction.toLowerCase().search('турнике')!=-1,-->
+                        <!--escalat:instruction.toLowerCase().search('эскалат')!=-1,-->
+                        <!--lest:instruction.toLowerCase().search('лест')!=-1-->
+
                         <p></p>
                         <b>В городе</b>
                         <div class="outdor">
@@ -104,7 +107,7 @@
                 <img ng-click="code_show = !code_show" src="images/html-icon.png">
             </div>
             <div class="html-share shadow" ng-show="code_show" >
-                <textarea class="form-control" rows="3"><iframe src='{{$location.absUrl()}}' width='420px' height='600px' frameborder='0'/></textarea>
+                <textarea class="form-control" rows="3"><iframe src='{{$location.absUrl()}}' width='475px' height='600px' frameborder='0'/></textarea>
             </div>
         </div>
     </div>
@@ -121,7 +124,9 @@
                     <input type="submit" class="send_btn" value=""
                        style="background-image: url(images/search.png); border: solid 0px #000000; width: 50px; height: 40px;" />
             </form>
+            <div class="search-desc">Поиск удобного выхода из метро</div>
         </div>
+
 
     </div>
 
@@ -129,6 +134,7 @@
         <a href="#">
             <h2>ВАШ ВЫХОД</h2>
         </a>
+        <div class="subheader">Поиск удобного выхода из метро</div>
         <img src="images/nextgis.png">
     </div>
     <!--
