--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -110,6 +110,7 @@
                 <img ng-click="vkshare()" src="images/vk-icon.png">
                 <img ng-click="send_mail()" src="images/email-icon.png">
                 <img ng-click="code_show = !code_show" src="images/html-icon.png">
+                <img ng-click="print-page()" src="images/print.png">
             </div>
             <div class="html-share shadow" ng-show="code_show" >
                 <textarea class="form-control" rows="3"><iframe src='{{$location.absUrl()}}' width='475px' height='600px' frameborder='0'/></textarea>
@@ -121,7 +122,7 @@
         <div class="whiteBg"></div>
 
         <div class="search_form">
-            <form action="{{'#/'+destination}}">
+            <form autocomplete="off" action="{{'#/'+destination}}">
                     <input type="text" class="form-control" id="destination" placeholder="Введите адрес"
                        typeahead="address for address in getLocation($viewValue) | filter:$viewValue"
                        ng-model="destination" autofocus/>
