--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
 
+    <meta property="og:title" content="Ваш выход">
+    <meta property="og:description" content="{{indoorSides[0]}}{{indoorSides[1]}}{{indoorSides[2]}}{{station.indoor.instructions[0]}}...">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/fbimg.png" url="images/fbimg.png">
+    <meta name="twitter:image:src" content="images/fbimg.png">
+
+
 </head>
 <body ng-app="myApp" ng-controller="metroCtrl">
     <script type="text/javascript" src="libs/angular/angular.min.js"></script>
