--- a/outside/metro4all/metro4all/static/index.html
+++ b/outside/metro4all/metro4all/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  ng-app="myApp" ng-controller="metroCtrl">
 <head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" />
@@ -15,12 +15,12 @@
     <meta property="og:title" content="Ваш выход">
     <meta property="og:description" content="{{indoorSides[0]}}{{indoorSides[1]}}{{indoorSides[2]}}{{station.indoor.instructions[0]}}...">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/fbimg.png" url="images/fbimg.png">
-    <meta name="twitter:image:src" content="images/fbimg.png">
+    <meta property="og:image" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.png" url="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.png">
+    <meta name="twitter:image:src" content="http://mdunaev.github.io/outside/metro4all/metro4all/static/images/fbimg.png">
 
 
 </head>
-<body ng-app="myApp" ng-controller="metroCtrl">
+<body>
     <script type="text/javascript" src="libs/angular/angular.min.js"></script>
     <script type="text/javascript" src="libs/angular/angular-route.min.js"></script>
     <script type="text/javascript" src="libs/ui-bootstrap/ui-bootstrap-tpls-0.11.0.min.js"></script>
